# itcarroll.github.io

./: .gitignore  README.md  _config.yml  index.md
2019-06-04-carnegie/: index.html
_includes/: head.html
assets/: main.scss
docker/: docker-compose.yaml
docker/conda/: Dockerfile
docker/gh-pages/: Dockerfile
docker/jupyter/: Dockerfile  pyproject.toml
docker/rstudio/: Dockerfile  disable_auth_rserver.conf
docs/: _config.yml  index.md
docs/.well-known/: atproto-did
docs/2020-08-17-edf-online/: index.html
docs/2021-02-23-NOAA-online/: index.html
docs/2021-04-27-usgs-online/: index.html
notebooks/: panel.ipynb  show-hv.ipynb
