[tool.poetry]
name = "requirements"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
bokeh = "^2.4.1"
Cartopy = "^0.20.1"
datashader = "^0.13.0"
geopandas = "^0.10.2"
geoviews = "^1.9.2"
hvplot = "^0.7.3"
ipywidgets = "^7.6.5"
jupyterlab = "^3.2.3"
jupyterlab-geojson = "^3.1.2"
jupyterlab-git = "^0.33.0"
jq = "^1.2.2"
mapclassify = "^2.4.3"
memory-profiler = "^0.58.0"
netCDF4 = "^1.5.8"
pystac = "^1.4.0"
python = ">=3.8,<3.11"
statsmodels = "^0.13.1"
sympy = "^1.9"
tensorflow = "^2.8.0"
xarray = "^0.20.1"
zarr = "^2.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
